<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    android:gravity="center"
    tools:context=".help.AProposActivity">
    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="170dp"
        android:layout_height="250dp"
        android:src="@drawable/sokhna2"
        android:layout_gravity="center"
        app:civ_border_color="@color/light_goldenrod_yellow"
        app:civ_border_width="4dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="10dp"
        app:civ_shadow_color="@color/white_smoke"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/light_goldenrod_yellow"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:textSize="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PAR"
        android:textColor="@color/light_goldenrod_yellow"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textSize="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auteur0"
        android:textColor="@color/light_goldenrod_yellow"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textSize="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auteur1"
        android:textColor="@color/light_goldenrod_yellow"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textSize="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact0"
        android:textColor="@color/light_goldenrod_yellow"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:textSize="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact2"
        android:textColor="@color/light_goldenrod_yellow"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textSize="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact1"
        android:textColor="@color/light_goldenrod_yellow"
        android:fontFamily="serif-monospace"
        android:textAlignment="center"
        android:textSize="12dp"/>

</LinearLayout>