<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MenuAppActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg0"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/alhamdoulilah"/>
                <LinearLayout
                    android:layout_below="@+id/themeImg0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/theme0"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg1"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/kawnou_khalbi"/>
                <LinearLayout
                    android:layout_below="@+id/themeImg1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                <TextView
                    android:layout_width="155dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:text="@string/theme1"/>
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg2"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/abismane"/>

                <LinearLayout
                    android:layout_below="@+id/themeImg2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/theme2"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold"
                        android:textSize="12dp" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg3"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/warisa_cheikh_tidiane"/>
                <LinearLayout
                    android:layout_below="@+id/themeImg3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                <TextView
                    android:layout_width="155dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:text="@string/theme3"/>
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg4"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/mouhamdou"/>

                <LinearLayout
                    android:layout_below="@+id/themeImg4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/theme4"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg5"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/alkhamri"/>
                <LinearLayout
                    android:layout_below="@+id/themeImg5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">
                <TextView
                    android:layout_width="155dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="12dp"
                    android:fontFamily="serif-monospace"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue"
                    android:textStyle="bold"
                    android:text="@string/theme5"/>
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/themeImg6"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/khoutbatou_anikaha"/>

                <LinearLayout
                    android:layout_below="@+id/themeImg6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="155dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="serif-monospace"
                        android:text="@string/theme6"
                        android:textAlignment="center"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold"
                        android:textSize="12dp" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>



    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/green"
        app:menu="@menu/drawermenu"
        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>